--- a/app/umember/views/wishlist/index.phtml
+++ b/app/umember/views/wishlist/index.phtml
@@ -40,8 +40,8 @@ $this->params['breadcrumbs'][] = $this->title;
                             </a>
                         </td>
                         <td><a href="<?php echo $url?>" target="_blank"><?php echo $_rets->location?></a></td>
-                        <td><?php echo $_rets->price?></td>
-                        <td><?php echo $_rets->status?></td>
+                        <td><?php echo $_rets->list_price?></td>
+                        <td><?php echo $_rets->statusName()?></td>
                         <td><?php echo date('Y-m-d H:i', strtotime($item->created_at))?></td>
                         <td><a class="btn-remove" href="/wishlist/remove/?id=<?php echo $item->id?>"><?php echo \WS::t('rets', 'Remove it')?></a></td>
                     </tr>
