--- a/app/umember/views/account/modify-password.phtml
+++ b/app/umember/views/account/modify-password.phtml
@@ -3,7 +3,7 @@ use yii\helpers\Html;
 use yii\widgets\ActiveForm;
 
 $t = \WS::lang('account');
-$this->title = tt("My account", '我的帐户');
+$this->title = tt("Modify Password", '修改密码');
 ?>
 
 <?php
