--- a/app/umember/views/profile/index.phtml
+++ b/app/umember/views/profile/index.phtml
@@ -4,7 +4,7 @@ use yii\widgets\ActiveForm;
 ?>
 
 <?php
-$this->title = \WS::t('profile', 'My Profile');
+$this->title = tt('My Profile', '个人资料');
 $this->params['breadcrumbs'][] = $this->title;
 ?>
 
