--- a/app/umember/views/wishlist/index.phtml
+++ b/app/umember/views/wishlist/index.phtml
@@ -39,7 +39,7 @@ $this->params['breadcrumbs'][] = $this->title;
                                 <img style="width:50px;height:50px" src="<?php echo $_rets->getPhoto(0, 50,50)?>">
                             </a>
                         </td>
-                        <td><a href="<?php echo $url?>" target="_blank"><?php echo $_rets->location?></a></td>
+                        <td><a href="<?php echo $url?>" target="_blank"><?php echo $_rets->title()?></a></td>
                         <td><?php echo $_rets->list_price?></td>
                         <td><?php echo $_rets->statusName()?></td>
                         <td><?php echo date('Y-m-d H:i', strtotime($item->created_at))?></td>
