--- a/app/umember/views/account/index.phtml
+++ b/app/umember/views/account/index.phtml
@@ -70,7 +70,7 @@ $this->params['breadcrumbs'][] = $this->title;
     </li>
 </ul>
 
-<script src="http://res.wx.qq.com/connect/zh_CN/htmledition/js/wxLogin.js"></script>
+<script src="https://res.wx.qq.com/connect/zh_CN/htmledition/js/wxLogin.js"></script>
 <script type="text/javascript">
 <?php
     $app = \Yii::$app;
@@ -80,7 +80,7 @@ $('#btn-bind-wechat').click(function () {
       id:"login_container", 
       appid: "<?php echo $app->params['wechat']['appId']?>",
       scope: "snsapi_login",
-      redirect_uri: "<?php echo $app->request->hostInfo?>/bind-wechat/",
+      redirect_uri: "https://wechat.usleju.com/bind-wechat/",
       state: "<?php echo $app->request->csrfToken?>",
       style: "white",
       // href: "" /*样式定制*/
