--- a/app/umember/views/account/index.phtml
+++ b/app/umember/views/account/index.phtml
@@ -64,6 +64,7 @@ $this->params['breadcrumbs'][] = $this->title;
                     <a href="/unbind-wechat/" class="ft"><?php _tt('Unbind', '解除')?></a>
                 <?php else:?>
                     <a id="btn-bind-wechat" class="ft"><?php _tt('Bind', '绑定')?></a>
+                    <span id="login_container"></span>
                 <?php endif?>
             </div>
         </div>
