--- a/app/umember/views/account/index.phtml
+++ b/app/umember/views/account/index.phtml
@@ -83,7 +83,7 @@ $('#btn-bind-wechat').click(function () {
       scope: "snsapi_login",
       redirect_uri: "https://wechat.usleju.com/bind-wechat/",
       state: "<?php echo $app->request->csrfToken?>",
-      style: "white",
+      style: "black",
       // href: "" /*样式定制*/
     });
 });
