--- a/app/umember/views/wishlist/index.phtml
+++ b/app/umember/views/wishlist/index.phtml
@@ -1,5 +1,5 @@
 <?php
-use module\estate\helpers\Rets as RetsHelper;
+use module\estate\helpers\FieldFilter;
 
 $t = function($message, $params=[]){
     return \WS::t('wishlist', $message, $params);
@@ -28,33 +28,26 @@ $this->params['breadcrumbs'][] = $this->title;
                 </tr>
                 </thead>
                 <tbody>
-                <?php foreach($wishlist as $item):?>
+                <?php foreach($wishlist as $wish):?>
                     <?php
                         $domain = domain();
-                        $url = '';
-                        if ($item->area_id === 'ma') {
-                            $url = RetsHelper::getUrl($item->getRets());
-                        } else {
-                            $rets = \common\listhub\estate\House::findOne($item->list_no);
-                            if (!$rets) continue;
-                            $url = RetsHelper::getUrl($rets);
-                        }
+                        $house = $wish->house;
+                        if (!$house) continue;
+                        $url = FieldFilter::url($house->id, !$is_rental);
                     ?>
                     <tr>
                         <td>
                             <a href="<?php echo $url?>" target="_blank">
-                                <img style="width:50px;height:50px" src="<?php echo $item->data->photo_url?>">
+                                <img style="width:50px;height:50px" src="<?php echo $house->photo?>">
                             </a>
                         </td>
-                        <td><a href="<?php echo $url?>" target="_blank"><?php echo $item->data->title?></a></td>
+                        <td><a href="<?php echo $url?>" target="_blank"><?php echo $house->nm?></a></td>
                         <td>
-                            <?php echo $item->data->list_price['prefix'] ?? ''?>
-                            <?php echo $item->data->list_price['value']?>
-                            <?php echo $item->data->list_price['suffix'] ?? ''?>
+                            <?php echo FieldFilter::money($house->price)?>
                         </td>
-                        <td><?php echo $item->data->status_name?></td>
-                        <td><?php echo date('Y-m-d H:i', strtotime($item->created_at))?></td>
-                        <td><a class="btn-remove" href="/rets/wishlist/delete/?id=<?php echo $item->id?>"><?php echo \WS::t('rets', 'Remove it')?></a></td>
+                        <td><?php echo FieldFilter::statusName($house->status, $house->prop)?></td>
+                        <td><?php echo date('Y-m-d H:i', strtotime($wish->created_at))?></td>
+                        <td><a class="btn-remove" href="/rets/wishlist/delete/?id=<?php echo $wish->id?>"><?php echo \WS::t('rets', 'Remove it')?></a></td>
                     </tr>
                 <?php endforeach?>
                 </tbody>
